tests/custom/STARIS_2022/basic/set-operators/in-type-error-02/stderr.expected
Error:
    Parser error in file: in.essence Error is:
ValidatorError in.essence:2:21:
  |
2 | such that a = (1 in (1, 1, 2, 3))
  |                     ^^^^^^^^^^^^
Type error:
	Expected:"Container of  int"
	Got: (int, int, int, int)

